--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.5.4",
     "dymo-player": "^0.3.4",
     "lodash": "^4.17.15",
+    "music-metadata": "^4.5.3",
     "rxjs": "~6.5.1",
     "stream": "0.0.2",
     "tslib": "^1.9.0",
